[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Title.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/logo.shader" type="Shader" id=2]
[ext_resource path="res://assets/ui/logo.png" type="Texture" id=3]
[ext_resource path="res://addons/paulloz.colorblindness/colorblindness.gd" type="Script" id=4]
[ext_resource path="res://assets/map/tileset.tres" type="TileSet" id=5]
[ext_resource path="res://scenes/objects/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/objects/TitleButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/prstart.ttf" type="DynamicFontData" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/shift = 0.5

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 8 )

[node name="Title" type="Control"]
margin_right = 1024.0
margin_bottom = 640.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 96
custom_constants/margin_top = 40
custom_constants/margin_left = 96
custom_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 96.0
margin_top = 40.0
margin_right = 928.0
margin_bottom = 576.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_right = 832.0
margin_bottom = 104.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer/CenterContainer"]
material = SubResource( 1 )
margin_left = 125.0
margin_right = 707.0
margin_bottom = 104.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 832.0
margin_bottom = 432.0
size_flags_vertical = 3

[node name="Keybinds" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 436.0
margin_right = 832.0
margin_bottom = 501.0
text = "Use arrows or A/D to move
Press space or up to jump

"
align = 1
valign = 1

[node name="Info" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 505.0
margin_right = 832.0
margin_bottom = 536.0
text = "Game Off 2019 entry
Built with Godot Engine"
align = 1
valign = 1

[node name="SettingsButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 176.0
margin_top = 528.0
margin_right = 336.0
margin_bottom = 592.0
mouse_default_cursor_shape = 2

[node name="QuitButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 688.0
margin_top = 528.0
margin_right = 848.0
margin_bottom = 592.0
mouse_default_cursor_shape = 2

[node name="Map" type="Node2D" parent="."]

[node name="Colorblindness" type="Node" parent="Map"]
editor/display_folded = true
script = ExtResource( 4 )

[node name="ColorLabel" type="Label" parent="Map/Colorblindness"]
margin_left = 48.0
margin_top = 48.0
margin_right = 192.0
margin_bottom = 80.0

[node name="TileMap" type="TileMap" parent="Map"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1, 0, 4, -65536, 0, 5, -65535, 0, 5, -65534, 0, 5, -65533, 0, 5, -65532, 0, 5, -65531, 0, 5, -65530, 0, 5, -65529, 0, 5, -65528, 0, 5, -65527, 0, 5, -65526, 0, 5, -65525, 0, 5, -65524, 0, 5, -65523, 0, 5, -65522, 0, 5, -65521, 0, 5, -65520, 0, 5, -65519, 0, 5, -65518, 0, 5, -65517, 0, 5, -65516, 0, 5, -65515, 0, 5, -65514, 0, 5, -65513, 0, 5, -65512, 0, 5, -65511, 0, 5, -65510, 0, 5, -65509, 0, 5, -65508, 0, 5, -65507, 0, 5, -65506, 0, 5, -65505, 0, 5, -65504, 0, 3, -65488, 2, 0, -65487, 2, 5, -65486, 2, 5, -65485, 2, 5, -65484, 2, 5, -65483, 2, 5, -65482, 2, 5, -65481, 2, 3, 65535, 0, 196611, 0, 0, 262149, 1, 0, 262149, 2, 0, 65541, 3, 0, 262149, 4, 0, 65541, 5, 0, 262149, 6, 0, 262149, 7, 0, 65541, 8, 0, 65541, 9, 0, 262149, 10, 0, 262149, 11, 0, 65541, 12, 0, 262149, 13, 0, 262149, 14, 0, 262149, 15, 0, 65541, 16, 0, 262149, 17, 0, 262149, 18, 0, 65541, 19, 0, 262149, 20, 0, 262149, 21, 0, 65541, 22, 0, 65541, 23, 0, 262149, 24, 0, 262149, 25, 0, 65541, 26, 0, 262149, 27, 0, 65541, 28, 0, 262149, 29, 0, 262149, 30, 0, 65541, 31, 0, 65541, 32, 0, 65542, 48, 2, 0, 49, 2, 327685, 50, 2, 327685, 51, 2, 327685, 52, 2, 327685, 53, 2, 327685, 54, 2, 262148, 55, 2, 65542, 131071, 0, 196611, 65536, 0, 65541, 65537, 0, 65541, 65538, 0, 262149, 65539, 0, 65541, 65540, 0, 262149, 65541, 0, 262149, 65542, 0, 262149, 65543, 0, 65541, 65544, 0, 262149, 65545, 0, 262149, 65546, 0, 65541, 65547, 0, 262149, 65548, 0, 262149, 65549, 0, 262149, 65550, 0, 262149, 65551, 0, 65541, 65552, 0, 65541, 65553, 0, 65541, 65554, 0, 65541, 65555, 0, 65541, 65556, 0, 65541, 65557, 0, 65541, 65558, 0, 65541, 65559, 0, 262149, 65560, 0, 262149, 65561, 0, 262149, 65562, 0, 65541, 65563, 0, 262149, 65564, 0, 262149, 65565, 0, 262149, 65566, 0, 65541, 65567, 0, 262149, 65568, 0, 65542, 65590, 2, 196611, 65591, 2, 65542, 196607, 0, 196611, 131072, 0, 262149, 131073, 0, 262149, 131074, 0, 65541, 131075, 0, 65541, 131076, 0, 65541, 131077, 0, 262149, 131078, 0, 65541, 131079, 0, 65541, 131080, 0, 262149, 131081, 0, 65541, 131082, 0, 262149, 131083, 0, 65541, 131084, 0, 262149, 131085, 0, 262149, 131086, 0, 262149, 131087, 0, 65541, 131088, 0, 262149, 131089, 0, 65541, 131090, 0, 65541, 131091, 0, 65541, 131092, 0, 65541, 131093, 0, 262149, 131094, 0, 65541, 131095, 0, 65541, 131096, 0, 262149, 131097, 0, 65541, 131098, 0, 262149, 131099, 0, 262149, 131100, 0, 262149, 131101, 0, 65541, 131102, 0, 262149, 131103, 0, 262149, 131104, 0, 65542, 131126, 2, 196611, 131127, 2, 65542, 262143, 0, 196611, 196608, 0, 262149, 196609, 0, 65541, 196610, 0, 262149, 196611, 0, 262149, 196612, 0, 65541, 196613, 0, 65541, 196614, 0, 65541, 196615, 0, 262149, 196616, 0, 262149, 196617, 0, 65541, 196618, 0, 262149, 196619, 0, 65541, 196620, 0, 262149, 196621, 0, 65541, 196622, 0, 262149, 196623, 0, 65541, 196624, 0, 65541, 196625, 0, 65541, 196626, 0, 65541, 196627, 0, 65541, 196628, 0, 262149, 196629, 0, 65541, 196630, 0, 65541, 196631, 0, 262149, 196632, 0, 262149, 196633, 0, 262149, 196634, 0, 65541, 196635, 0, 262149, 196636, 0, 65541, 196637, 0, 65541, 196638, 0, 262149, 196639, 0, 65541, 196640, 0, 65542, 196662, 2, 196611, 196663, 2, 65542, 327679, 0, 196611, 262144, 0, 262149, 262145, 0, 262149, 262146, 0, 262149, 262147, 0, 262149, 262148, 0, 65541, 262149, 0, 262149, 262150, 0, 65541, 262151, 0, 262149, 262152, 0, 65541, 262153, 0, 262149, 262154, 0, 65541, 262155, 0, 65541, 262156, 0, 262149, 262157, 0, 65541, 262158, 0, 262149, 262159, 0, 262149, 262160, 0, 262149, 262161, 0, 262149, 262162, 0, 65541, 262163, 0, 65541, 262164, 0, 65541, 262165, 0, 65541, 262166, 0, 262149, 262167, 0, 65541, 262168, 0, 262149, 262169, 0, 65541, 262170, 0, 65541, 262171, 0, 262149, 262172, 0, 65541, 262173, 0, 262149, 262174, 0, 262149, 262175, 0, 65541, 262176, 0, 65542, 262198, 2, 196611, 262199, 2, 65542, 393215, 0, 196611, 327680, 0, 65541, 327681, 0, 65541, 327682, 0, 65541, 327683, 0, 65541, 327684, 0, 262149, 327685, 0, 65541, 327686, 0, 262149, 327687, 0, 65541, 327688, 0, 65541, 327689, 0, 262149, 327690, 0, 262149, 327691, 0, 65541, 327692, 0, 131076, 327693, 0, 327685, 327694, 0, 327685, 327695, 0, 327685, 327696, 0, 327685, 327697, 0, 327685, 327698, 0, 327685, 327699, 0, 262148, 327700, 0, 65541, 327701, 0, 65541, 327702, 0, 65541, 327703, 0, 65541, 327704, 0, 262149, 327705, 0, 262149, 327706, 0, 262149, 327707, 0, 262149, 327708, 0, 262149, 327709, 0, 262149, 327710, 0, 262149, 327711, 0, 65541, 327712, 0, 65542, 327734, 2, 196611, 327735, 2, 65542, 458751, 0, 196611, 393216, 0, 65541, 393217, 0, 65541, 393218, 0, 65541, 393219, 0, 65541, 393220, 0, 65541, 393221, 0, 65541, 393222, 0, 262149, 393223, 0, 262149, 393224, 0, 65541, 393225, 0, 65541, 393226, 0, 65541, 393227, 0, 65541, 393228, 0, 65542, 393235, 0, 196611, 393236, 0, 65541, 393237, 0, 65541, 393238, 0, 262149, 393239, 0, 65541, 393240, 0, 65541, 393241, 0, 262149, 393242, 0, 262149, 393243, 0, 262149, 393244, 0, 262149, 393245, 0, 262149, 393246, 0, 262149, 393247, 0, 262149, 393248, 0, 65542, 393270, 2, 196611, 393271, 2, 65542, 524287, 0, 196611, 458752, 0, 262149, 458753, 0, 65541, 458754, 0, 262149, 458755, 0, 131076, 458756, 0, 327685, 458757, 0, 327685, 458758, 0, 327685, 458759, 0, 327685, 458760, 0, 327685, 458761, 0, 327685, 458762, 0, 262148, 458763, 0, 65541, 458764, 0, 65542, 458771, 0, 196611, 458772, 0, 262149, 458773, 0, 131076, 458774, 0, 327685, 458775, 0, 327685, 458776, 0, 327685, 458777, 0, 327685, 458778, 0, 327685, 458779, 0, 327685, 458780, 0, 262148, 458781, 0, 262149, 458782, 0, 65541, 458783, 0, 65541, 458784, 0, 65542, 458806, 2, 196611, 458807, 2, 65542, 589823, 0, 196611, 524288, 0, 262149, 524289, 0, 65541, 524290, 0, 65541, 524291, 0, 65542, 524298, 0, 327684, 524299, 0, 327685, 524300, 0, 327683, 524307, 0, 327684, 524308, 0, 327685, 524309, 0, 327683, 524316, 0, 196611, 524317, 0, 65541, 524318, 0, 262149, 524319, 0, 262149, 524320, 0, 65542, 524342, 2, 196611, 524343, 2, 65542, 655359, 0, 196611, 589824, 0, 262149, 589825, 0, 262149, 589826, 0, 262149, 589827, 0, 65542, 589852, 0, 196611, 589853, 0, 262149, 589854, 0, 262149, 589855, 0, 65541, 589856, 0, 65542, 589878, 2, 196611, 589879, 2, 65542, 720895, 0, 196611, 655360, 0, 65541, 655361, 0, 65541, 655362, 0, 65541, 655363, 0, 65542, 655388, 0, 196611, 655389, 0, 65541, 655390, 0, 65541, 655391, 0, 65541, 655392, 0, 65542, 655414, 2, 196611, 655415, 2, 65542, 786431, 0, 196611, 720896, 0, 65541, 720897, 0, 65541, 720898, 0, 65541, 720899, 0, 65542, 720924, 0, 196611, 720925, 0, 65541, 720926, 0, 262149, 720927, 0, 65541, 720928, 0, 65542, 720950, 2, 196611, 720951, 2, 65542, 851967, 0, 196611, 786432, 0, 65541, 786433, 0, 65541, 786434, 0, 262149, 786435, 0, 65542, 786460, 0, 196611, 786461, 0, 262149, 786462, 0, 65541, 786463, 0, 262149, 786464, 0, 65542, 786486, 2, 196611, 786487, 2, 65542, 917503, 0, 196611, 851968, 0, 262149, 851969, 0, 65541, 851970, 0, 65541, 851971, 0, 65542, 851996, 0, 196611, 851997, 0, 262149, 851998, 0, 65541, 851999, 0, 65541, 852000, 0, 65542, 852022, 2, 196611, 852023, 2, 65542, 983039, 0, 196611, 917504, 0, 65541, 917505, 0, 262149, 917506, 0, 65541, 917507, 0, 65542, 917510, 0, 4, 917511, 0, 5, 917512, 0, 5, 917513, 0, 5, 917514, 0, 5, 917515, 0, 5, 917516, 0, 5, 917517, 0, 5, 917518, 0, 5, 917519, 0, 5, 917520, 0, 5, 917521, 0, 5, 917522, 0, 5, 917523, 0, 5, 917524, 0, 5, 917525, 0, 5, 917526, 0, 5, 917527, 0, 5, 917528, 0, 5, 917529, 0, 3, 917532, 0, 196611, 917533, 0, 262149, 917534, 0, 65541, 917535, 0, 65541, 917536, 0, 65542, 917558, 2, 196611, 917559, 2, 65542, 1048575, 0, 196611, 983040, 0, 262149, 983041, 0, 65541, 983042, 0, 65541, 983043, 0, 65542, 983046, 0, 327684, 983047, 0, 327685, 983048, 0, 327685, 983049, 0, 327685, 983050, 0, 327685, 983051, 0, 262148, 983052, 0, 65541, 983053, 0, 262149, 983054, 0, 65541, 983055, 0, 262149, 983056, 0, 262149, 983057, 0, 262149, 983058, 0, 65541, 983059, 0, 262149, 983060, 0, 131076, 983061, 0, 327685, 983062, 0, 327685, 983063, 0, 327685, 983064, 0, 327685, 983065, 0, 327683, 983068, 0, 196611, 983069, 0, 65541, 983070, 0, 65541, 983071, 0, 65541, 983072, 0, 65542, 983094, 2, 196611, 983095, 2, 65542, 1114111, 0, 196611, 1048576, 0, 65541, 1048577, 0, 262149, 1048578, 0, 262149, 1048579, 0, 65542, 1048587, 0, 196611, 1048588, 0, 262149, 1048589, 0, 65541, 1048590, 0, 65541, 1048591, 0, 262149, 1048592, 0, 262149, 1048593, 0, 262149, 1048594, 0, 65541, 1048595, 0, 65541, 1048596, 0, 65542, 1048604, 0, 196611, 1048605, 0, 65541, 1048606, 0, 65541, 1048607, 0, 65541, 1048608, 0, 65542, 1048630, 2, 196611, 1048631, 2, 65542, 1179647, 0, 196611, 1114112, 0, 65541, 1114113, 0, 65541, 1114114, 0, 65541, 1114115, 0, 196612, 1114116, 0, 3, 1114123, 0, 196611, 1114124, 0, 65541, 1114125, 0, 262149, 1114126, 0, 65541, 1114127, 0, 262149, 1114128, 0, 262149, 1114129, 0, 65541, 1114130, 0, 65541, 1114131, 0, 262149, 1114132, 0, 65542, 1114139, 0, 4, 1114140, 0, 65540, 1114141, 0, 262149, 1114142, 0, 262149, 1114143, 0, 65541, 1114144, 0, 65542, 1114166, 2, 196611, 1114167, 2, 65542, 1245183, 0, 196611, 1179648, 0, 262149, 1179649, 0, 65541, 1179650, 0, 65541, 1179651, 0, 262149, 1179652, 0, 65542, 1179659, 0, 196611, 1179660, 0, 65541, 1179661, 0, 65541, 1179662, 0, 262149, 1179663, 0, 65541, 1179664, 0, 262149, 1179665, 0, 65541, 1179666, 0, 65541, 1179667, 0, 262149, 1179668, 0, 65542, 1179675, 0, 196611, 1179676, 0, 65541, 1179677, 0, 262149, 1179678, 0, 262149, 1179679, 0, 65541, 1179680, 0, 65542, 1179696, 2, 0, 1179697, 2, 5, 1179698, 2, 5, 1179699, 2, 5, 1179700, 2, 5, 1179701, 2, 5, 1179702, 2, 65540, 1179703, 2, 65542, 1310719, 0, 196611, 1245184, 0, 65541, 1245185, 0, 65541, 1245186, 0, 65541, 1245187, 0, 262149, 1245188, 0, 196612, 1245189, 0, 5, 1245190, 0, 5, 1245191, 0, 5, 1245192, 0, 5, 1245193, 0, 5, 1245194, 0, 5, 1245195, 0, 65540, 1245196, 0, 65541, 1245197, 0, 262149, 1245198, 0, 65541, 1245199, 0, 262149, 1245200, 0, 65541, 1245201, 0, 262149, 1245202, 0, 65541, 1245203, 0, 262149, 1245204, 0, 196612, 1245205, 0, 5, 1245206, 0, 5, 1245207, 0, 5, 1245208, 0, 5, 1245209, 0, 5, 1245210, 0, 5, 1245211, 0, 65540, 1245212, 0, 65541, 1245213, 0, 65541, 1245214, 0, 65541, 1245215, 0, 65541, 1245216, 0, 65542, 1245232, 2, 0, 1245233, 2, 327685, 1245234, 2, 327685, 1245235, 2, 327685, 1245236, 2, 327685, 1245237, 2, 327685, 1245238, 2, 327685, 1245239, 2, 327683, 1376255, 0, 327684, 1310720, 0, 327685, 1310721, 0, 327685, 1310722, 0, 327685, 1310723, 0, 327685, 1310724, 0, 327685, 1310725, 0, 327685, 1310726, 0, 327685, 1310727, 0, 327685, 1310728, 0, 327685, 1310729, 0, 327685, 1310730, 0, 327685, 1310731, 0, 327685, 1310732, 0, 327685, 1310733, 0, 327685, 1310734, 0, 327685, 1310735, 0, 327685, 1310736, 0, 327685, 1310737, 0, 327685, 1310738, 0, 327685, 1310739, 0, 327685, 1310740, 0, 327685, 1310741, 0, 327685, 1310742, 0, 327685, 1310743, 0, 327685, 1310744, 0, 327685, 1310745, 0, 327685, 1310746, 0, 327685, 1310747, 0, 327685, 1310748, 0, 327685, 1310749, 0, 327685, 1310750, 0, 327685, 1310751, 0, 327685, 1310752, 0, 327683 )

[node name="Player" parent="Map" instance=ExtResource( 6 )]
position = Vector2( 512, 416 )
z_index = 1

[node name="Buttons" type="Node2D" parent="Map"]

[node name="Continue" parent="Map/Buttons" instance=ExtResource( 7 )]
position = Vector2( 512, 240 )
text = "Continue"

[node name="LevelName" type="Label" parent="Map/Buttons/Continue"]
margin_left = -80.0
margin_top = 2.0
margin_right = 80.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
uppercase = true

[node name="NewGame" parent="Map/Buttons" instance=ExtResource( 7 )]
position = Vector2( 224, 304 )
text = "New game"

[node name="Settings" parent="Map/Buttons" instance=ExtResource( 7 )]
position = Vector2( 256, 560 )
text = "Settings"

[node name="Levels" parent="Map/Buttons" instance=ExtResource( 7 )]
position = Vector2( 800, 304 )
text = "Levels"

[node name="Quit" parent="Map/Buttons" instance=ExtResource( 7 )]
position = Vector2( 768, 560 )
text = "Quit"
[connection signal="pressed" from="CanvasLayer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="body_entered" from="Map/Buttons/Continue" to="." method="button_continue"]
[connection signal="body_entered" from="Map/Buttons/NewGame" to="." method="button_new_game"]
[connection signal="body_entered" from="Map/Buttons/Settings" to="." method="button_settings"]
[connection signal="input_event" from="Map/Buttons/Settings" to="." method="_on_Settings_input_event"]
[connection signal="mouse_entered" from="Map/Buttons/Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="body_entered" from="Map/Buttons/Levels" to="." method="button_levels"]
[connection signal="body_entered" from="Map/Buttons/Quit" to="." method="button_quit"]
